@@ -1,5 +1,6 @@
 package com.alm.services.implementations;
 
+import com.alm.dtos.paginations.UsersPaginationDTO;
 import com.alm.dtos.users.CreateUserDTO;
 import com.alm.dtos.users.GetUserDTO;
 import com.alm.entities.Role;
@@ -8,6 +9,11 @@ import com.alm.mappers.UserMapper;
 import com.alm.repositories.UserRepo;
 import com.alm.entities.User;
 import com.alm.services.abstractions.IUserService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
@@ -25,16 +31,27 @@ public class UserService implements IUserService {
         this.userMapper = userMapper;
     }
 
-    public List<GetUserDTO> findAllUsers() {
-        List<User> users = userRepo.findAll();
-        return users.stream()
-                .map(user -> {
-                    return userMapper.userToUserDTO(user);
-                }).collect(Collectors.toList());
+    public UsersPaginationDTO findAllUsers(int pageNumber, int pageSize) {
+        Pageable pageable = PageRequest.of(pageNumber, pageSize);
+        Page<User> users = userRepo.findAll(pageable);
+        List<User> usersList = users.getContent();
+        List<GetUserDTO> mappedUsers = usersList.stream()
+                .map(userMapper::userToUserDTO).toList();
+
+        UsersPaginationDTO usersPaginationDTO = new UsersPaginationDTO(
+                users.getNumber(),
+                users.getSize(),
+                users.getTotalPages(),
+                users.getTotalElements(),
+                users.isLast(),
+                mappedUsers
+        );
+
+        return usersPaginationDTO;
     }
 
-    public GetUserDTO findUserById(UUID userId) {
-        User user = userRepo.findById(userId).orElse(null);
+    public GetUserDTO findUserById(UUID userId) throws CustomRunTimeException{
+        User user = userRepo.findById(userId).orElseThrow(() -> new CustomRunTimeException("404", HttpStatus.NOT_FOUND, "User Id was not found"));
         return userMapper.userToUserDTO(user);
     }
 
